# UOregon-CS431-Final

./: .gitignore  .gitmodules  ResearchProposal.tex
model/: CMakeLists.txt
model/include/: FileReader.h  cuda_operations.h  image.h  operations.h  scene.h
model/scripts/: build.sh  clean.sh  projectrc  runner.sh
model/src/: cuda_operation.cu  main.cpp  scene.cpp
proposal/: ResearchProposal.tex  workscited.bib
renderer/: CMakeLists.txt  README.md
renderer/include/: FileReader.h  camera.h  image.h  lib.h  main.h  model.h  operations.h  prefix.h  render.h  scene.h
renderer/scripts/: run.sh
renderer/src/: FileReader.cpp  image.cpp  main.cpp  model.cpp  prefix.cu  render.cu  scene.cpp
renderer/src/data/: fetch_training.sh
renderer/src/lib/: lib.cpp
report/: ResearchProposal.tex  report.tex  workscited.bib
training/: train.cpp
training/lib/: camera.h  model.h
